use color variable, fix tooltip rowaction text is not readable

--- a/plugins/Morpheus/stylesheets/tooltip.less
+++ b/plugins/Morpheus/stylesheets/tooltip.less
@@ -6,7 +6,7 @@
     .border-radius(3px);
     .ui-tooltip-content {
         background: none;
-        color: @silver-60;
+        color: @silver-90;
         padding: 5px;
     }
     h1, h2, h3, h4, h5 {
